--- a/src/tools/otbedit/oedit/oedit.vcxproj.filters
+++ b/src/tools/otbedit/oedit/oedit.vcxproj.filters
@@ -256,6 +256,9 @@
     <ClInclude Include="scbarg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\PresetColor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\bmp00001.bmp">
