--- a/src/tools/otbedit/oedit/oedit.vcxproj
+++ b/src/tools/otbedit/oedit/oedit.vcxproj
@@ -477,6 +477,7 @@ copy ..\..\..\libs\common_scmlib\*.* $(OutDir)scmlib
     <Text Include="..\doc\LICENSE_CSizingControlBar.txt.txt" />
     <Text Include="..\doc\LICENSE_MINISCHEME.txt" />
     <Text Include="..\doc\LICENSE_PostgreSQL.txt" />
+    <Text Include="..\doc\LICENSE_SOLARIZED.txt" />
     <Text Include="..\doc\LICENSE_TINYSCHEME.txt" />
     <Text Include="..\doc\macro_otbedit.txt" />
     <Text Include="..\doc\option.txt" />
