--- a/src/tools/otbedit/oedit/oedit.vcxproj.filters
+++ b/src/tools/otbedit/oedit/oedit.vcxproj.filters
@@ -345,6 +345,9 @@
     <Text Include="..\doc\LICENSE_BSD.txt">
       <Filter>doc</Filter>
     </Text>
+    <Text Include="..\doc\LICENSE_SOLARIZED.txt">
+      <Filter>doc</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="res\cursor1.cur">
